--- a/src/main/resources/templates/task_view.html
+++ b/src/main/resources/templates/task_view.html
@@ -173,7 +173,7 @@
       <label class="bid_label" for="current_price">Active lowest offer</label><br>
       <p id="current_price" th:text="${task.getActiveLowestPrice()} + ' €'">400 €</p>
       <br>
-      <form id="bid_form" action="#" th:action="@{/bid}" method="post" sec:authorize="hasAuthority('developer')">
+      <form id="bid_form" action="#" th:action="@{/bid}" method="post" sec:authorize="hasAuthority('developer')" th:if="${!task.hasBiddingEnded()}">
         <input id="bid_input" type="number" name="offer" th:max="${task.getMaxPrice()}" min="1" th:value="${task.getMaxPrice()}" /><br>
         <input type="number" name="currentTask" th:value="${taskId}" hidden/>
         <div th:if="${myActiveOffer == null}">
@@ -194,8 +194,6 @@
     <div class="leftContent" style=" font-size: 20px; text-align: left; margin-left: 15px; ">
       <h3 style=" font-size: 25px; " th:text="${task.getTitle()}">Title</h3>
 
-
-
       <div style=" height: 5rem; width: 5rem; border-radius: 50%; display: inline-block;">
         <div class="menu">
           <img th:src="@{{path}(path=${task.getCreator()?.getPhotosImagePath()})}" src="../static/images/Default%20Profile%20Image.png" class="real_photo"
@@ -205,8 +203,6 @@
                   </span>
         </div>
       </div>
-
-
 
       <a th:href="@{/users/profile_view/{id}(id=${task.getCreator()?.getId()})}" href="#"><h5 th:text="${task.getCreator()?.getUsername()}" style=" margin: -45px 0px 50px 85px; ">thisIsAUsername</h5></a>
       <h4>About this task</h4>
@@ -227,14 +223,19 @@
         <img th:src="@{{path}(path=${offer.getBidder()?.getPhotosImagePath()})}" src="../static/images/Default%20Profile%20Image.png" class="real_photo"
              style=" height: 5rem; display: inline-block; "/>
         <span class="menu_label">
-                      <ion-icon id="camera_icon" name="camera-outline" style=" margin-top: -500px; font-size: 30px; color: rgba(0, 0, 0, 0);"></ion-icon>
-                  </span>
+          <ion-icon id="camera_icon" name="camera-outline" style=" margin-top: -500px; font-size: 30px; color: rgba(0, 0, 0, 0);"></ion-icon>
+        </span>
       </div>
     </div>
 
     <p style=" margin: -60px 0px 50px 95px; " th:text="${offer.getBidder()?.getUsername()}">thisIsAnotherUsername</p>
     <p style=" margin: -45px 0px 50px 95px; " th:text="'Offer: ' + ${offer.getPrice()} + ' €'">Offer: 300 €</p>
     <p style=" margin: -73px 0px 50px 395px; " th:text="${offer.getFormattedOfferDateTime()}">Time of offer: time</p>
+    <form action="#" th:action="@{/task_view/hire}" style=" margin: -115px 0px 50px 600px; " method="post" th:if="${logedInUserID == offer.getTask().getCreator().getId() and offer.getTask().hasBiddingEnded()}">
+      <input name="hireBidderId" th:value="${offer.getBidder().getId()}" hidden/>
+      <input type="number" name="currentTask" th:value="${taskId}" hidden/>
+      <button class="bid_button" type="submit">Hire</button>
+    </form>
     <!--<hr class="horizontal_line" th:if="${!iterStat.last}">-->
   </div>
 </div>
