--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -91,7 +91,7 @@
 
 </head>
 <body>
-<div id="navbar-top" th:replace="~{fragments :: navbar_top(${logedInUsername}, ${logedInUserID})}"></div>
+<div id="navbar-top" th:replace="~{fragments :: navbar_top(${logedInUsername}, ${logedInUserID}, ${notifications})}"></div>
 
 <div id="banner">
     <table class="banner_text">
